# OptiFuel-0.2

./: .gitignore  AGENTS.md  CONTEXT.md  FUEL_FLOW_ARCHITECTURE_v8.md  FUEL_FLOW_ARCHITECTURE_v9.md  README.md  optifuel_architecture_report.md  pyproject.toml
.cursor/rules/: optifuel-flowchart-guidance.mdc  stress-test-adversarial-plan-review.mdc  ui-design-language.mdc  ui-stress-test-review.mdc
.github/workflows/: ci.yml
artifacts/05a95eba-b013-44b3-8e9e-7b0e5296967e/: timeline.json
artifacts/0b01394a-d5b0-4e96-bdc8-bc18758a1162/: violations.json
artifacts/15a6d775-7c93-4a26-b1ab-822e9a2598a7/: run_manifest.json
artifacts/19a9fcd1-ca2a-46a9-bd7c-b5d392faeb26/: run_manifest.json  timeline.json  violations.json
artifacts/20293099-15fe-4099-a3f5-610e0579ca84/: run_manifest.json
artifacts/474365d0-60ac-43f3-822d-9426cfc81766/: timeline.json
docs/: optimiser-baseline-mapping.md  v9-must-traceability.md
docs/adr/: 0001-v1-implementation-scope.md  (+1 more)
fuelflow/: __init__.py  cli.py  services.py
optifuel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: install.sh  start.sh
tests/: conftest.py  test_api.py  test_conformance.py  test_contract_freeze.py  test_decay.py  test_determinism.py  test_fairness.py  test_feasibility_calendars.py  test_golden.py  test_import_boundaries.py  test_library_api.py  test_optimiser_baseline.py  test_optimizer_conformance.py  test_paths.py  test_persistence.py  test_tuning_policy.py
workbench/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+75 files in other folders)
