[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optifuel"
version = "0.1.0-alpha"
description = "OptiFuel v1-alpha: nuclear fuel handling workflow optimiser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
  "ortools>=9.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx2>=0.1.0",
]

[project.scripts]
optifuel = "fuelflow.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuelflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
